T179595 Fix error message contrast

--- a/BOI.Web/assets/src/css/config/constants.scss
+++ b/BOI.Web/assets/src/css/config/constants.scss
@@ -51,6 +51,7 @@ $light-blue: $sky-blue;
 
 $red: #ff0000;
 $dark-red: #cb0000;
+$xdark-red: #B20001;
 
 $light-grey: #f1f1f1;
 $grey: #e6e6e6;
