--- a/BOI.Web/assets/src/css/modules/forms.scss
+++ b/BOI.Web/assets/src/css/modules/forms.scss
@@ -353,7 +353,7 @@ input[type=checkbox] {
   margin-top: 10px;
   padding-left: 18px;
   color: $red;
-  background-image: url(/assets/dist/images/icons/sprite-icon-alert-red.svg);
+  background-image: url(/assets/dist/images/icons/sprite-icon-alert-xdark-red.svg);
   background-repeat: no-repeat;
   background-position: left top 4px;
   background-size: 12px;
