--- a/BOI.Web/assets/src/css/solicitor/solicitors.scss
+++ b/BOI.Web/assets/src/css/solicitor/solicitors.scss
@@ -14,7 +14,7 @@
   }
 
   .field-validation-error {
-    color: $dark-red;
+    color: $xdark-red;
 
     @media(min-width: $max-tablet) {
       position: absolute;
